src/test/resources/public/input/typechecking/fail/incorrect_operand/fail05.jova
class Test{

}

class Main {

  public int main() {
    bool bb;
    int result;
    Test t;
    result = 1;
    bb = result && t;
    return 0;
  }

}